--- a/index.html
+++ b/index.html
@@ -1,14 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>AI Education Website</title>
-</head>
-<body>
-  <h1>Welcome to AI Education</h1>
-  <p>Free AI learning website for students</p>
+  <meta charset="UTF-8">
+  <title>Vishal Learning - AI Education</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <textarea placeholder="Enter topic here"></textarea><br><br>
-  <button>Explain Topic</button>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f8;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header {
+      background: #0a58ca;
+      color: white;
+      padding: 20px;
+    }
+
+    section {
+      padding: 20px;
+    }
+
+    textarea {
+      width: 90%;
+      max-width: 500px;
+      height: 100px;
+      padding: 10px;
+      font-size: 16px;
+    }
+
+    button {
+      margin-top: 10px;
+      padding: 12px 20px;
+      font-size: 16px;
+      background: #198754;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
+
+    footer {
+      margin-top: 30px;
+      background: #222;
+      color: white;
+      padding: 15px;
+      font-size: 14px;
+    }
+  </style>
+</head>
+
+<body>
+
+  <header>
+    <h1>Vishal Learning</h1>
+    <p>Free AI Education Website</p>
+  </header>
+
+  <section>
+    <h2>AI Topic Explainer</h2>
+    <p>Topic likho aur AI se explanation pao (Coming Soon)</p>
+
+    <textarea placeholder="Example: What is Artificial Intelligence?"></textarea><br>
+    <button>Explain Topic</button>
+
+    <p><b>Note:</b> Abhi AI API connected nahi hai, ye demo design hai.</p>
+  </section>
+
+  <footer>
+    <p>Created by Vishal Shukla</p>
+    <p>Powered by GitHub Pages</p>
+  </footer>
 
 </body>
 </html>
