--- a/privacy.html
+++ b/privacy.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
 <title>Privacy Policy - Vishal Learning</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+body{font-family:Arial,sans-serif;margin:20px;line-height:1.6;background:#f4f6f8}
+h1{color:#0a58ca}
+p{margin-bottom:10px}
+a{color:#0a58ca;text-decoration:none}
+</style>
 </head>
 <body>
 <h1>Privacy Policy</h1>
-
-<p>
-Vishal Learning users ki privacy ka poora dhyan rakhta hai.
-</p>
-
-<p>
-Hum kisi bhi user ka personal data collect, store ya share nahi karte.
-</p>
-
-<p>
-Is website par sirf educational purpose ke liye content diya jata hai.
-</p>
-
-<p>
-Future me agar koi feature add hota hai jisme data required ho,
-to users ko pehle clearly inform kiya jayega.
-</p>
-
-<p>
-Is website ka use karte hue aap is privacy policy se agree karte hain.
-</p>
-
+<p>We respect your privacy and are committed to protecting your personal information.</p>
+<p>We do not collect or share personal data with third parties. Any information you provide (e.g., email for contact) is used only to respond to your inquiries.</p>
+<p>We may use cookies or analytics to improve website performance, but they do not identify individual users.</p>
+<p>By using this website, you agree to our Privacy Policy. We may update it from time to time; please review periodically.</p>
+<p>For questions, contact us at <a href="mailto:contact@vishallearning.com">contact@vishallearning.com</a>.</p>
+<p><a href="index.html">Back to Homepage</a></p>
 </body>
 </html>
-Added Privacy Policy page
